# prometheus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 39c61437491e_backtest_engine_sprint_2_columns.py  5bad4f6e49ca_paper_trading_engine_sprint_3.py  d2f8a40596be_live_trading_engine_sprint_4_broker_.py  d5aaa7039c4f_initial_schema.py
app/: __init__.py  config.py  main.py
app/application/schemas/: __init__.py  auth.py  backtest.py  common.py  market_data.py  notification.py  order.py  paper_trading.py  portfolio.py  position.py  risk.py  settings.py  strategy.py  watchlist.py
app/application/services/: __init__.py  analytics_service.py  auth_service.py  backtest_service.py  broker_monitoring_service.py  dashboard_service.py  live_execution_service.py  market_data_service.py  notification_service.py  (+10 more)
app/core/: decimal_utils.py  dependencies.py  exceptions.py  middleware.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_backtest_api.py  test_circuit_breaker_kill_switch.py  test_health_api.py  test_kill_switch_api.py  test_live_execution_engine.py  test_order_api.py  test_order_sync.py  test_paper_trading_api.py  test_paper_trading_validation.py  test_position_sync.py  test_risk_api.py  test_strategy_api.py
tests/unit/: test_backtest_engine.py  test_backtest_metrics.py  test_circuit_breaker.py  test_market_data_provider.py  test_mock_broker.py  test_paper_trading_scheduler.py  test_password_hashing.py  test_risk_engine.py
(+87 files in other folders)
